--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: OS2forms Documentation
+description: Documentation site for OS2forms
 theme: just-the-docs
 
 url: https://just-the-docs.github.io
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  github.com/os2forms: https://github.com/os2forms
+  os2.eu/os2forms: https://www.os2.eu/os2display
