--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: OS2forms Documentation
 description: Documentation site for OS2forms
 theme: just-the-docs
 
-logo: "/assets/site/os2forms.svg"
+logo: "/assets/site/OS2forms.svg"
 favicon_ico: "/assets/site/favicon.ico"
 
 aux_links:
