--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: OS2forms Documentation
-description: Documentation site for OS2forms
+description: Documentation for using, hosting and developing the OS2forms project
 theme: just-the-docs
 
 logo: "/assets/site/OS2forms.svg"
