--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ favicon_ico: "/assets/site/favicon.ico"
 
 aux_links:
   github.com/os2forms: https://github.com/os2forms
-  os2.eu/os2forms: https://www.os2.eu/os2display
+  os2.eu/os2forms: https://www.os2.eu/os2forms
