--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,7 @@ favicon_ico: "/assets/site/favicon.ico"
 aux_links:
   github.com/os2forms: https://github.com/os2forms
   os2.eu/os2forms: https://www.os2.eu/os2forms
+
+aux_scripts:
+  - https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js
+  - /assets/js/mermaid-init.js
