--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ aux_links:
   github.com/os2forms: https://github.com/os2forms
   os2.eu/os2forms: https://www.os2.eu/os2forms
 
-aux_scripts:
-  - https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js
-  - /assets/js/mermaid-init.js
+just_the_docs:
+  aux_scripts:
+    - 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js'
+    - '/assets/js/mermaid-init.js'
