--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: OS2forms Documentation
 description: Documentation for using, hosting and developing the OS2forms project
 theme: just-the-docs
+baseurl: "/os2forms-docs"
 
 logo: "/assets/site/OS2forms.svg"
 favicon_ico: "/assets/site/favicon.ico"
